fixed overflow on input-container

--- a/chat/static/styles.css
+++ b/chat/static/styles.css
@@ -5,7 +5,7 @@
   --secColor: #d7ebd8;
 }
 
-body {
+html, body {
   background-color: #222;
   margin: 0;
   padding: 0;
@@ -111,6 +111,8 @@ a:hover {
 }
 
 .input-container {
+  margin: auto;
+  max-width: 600px;
   display: flex;
   justify-content: center;
   align-items: center;
